[package]
name = "gnss-test"
version = "0.1.0"
authors = ["Maxime Austruy <austruym@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
env_logger = "0.11.3"
colored = "2.0.0"
rustfft = "6.2.0"
bytesize = {version = "1.2.0", features = ["serde"]}
serde = { version = "1.0.198", features = ["derive"] }
log = "0.4.21"
ctrlc = "3.4.4"
rayon = "1.10.0"
coredump = "0.1.2"
plotters = "0.3.5"
glob = "0.3.1"
chrono = "0.4.38"
