[package]
name = "gnss-rcv"
version = "0.2.0"
authors = ["Maxime Austruy <austruym@gmail.com>"]
edition = "2024"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
env_logger = "0.11.7"
colored = "3.0.0"
rustfft = "6.2.0"
bytesize = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
ctrlc = "3.4.5"
rayon = "1.10.0"
coredump = "0.1.2"
plotters = "0.3.7"
glob = "0.3.2"
chrono = "0.4.38"
gnss-rtk = "0.4.5"
gnss-rs = "2.3.5"
once_cell = "1.21.1"
map_3d = "0.1.5"

[target.'cfg(unix)'.dependencies]
rtlsdr_mt = { git = 'https://github.com/mx4/rtlsdr_mt.rs.git', branch = 'add-bias-tee' }
